test/spec_vectors/load/fail/module_55.wat
(module (memory 0) (func $type-address-empty-in-local.tee (local i32) (local.tee 0 (i32.load)) (drop)))